--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 airtable-python-wrapper==0.15.1
-mailchimp-marketing-python==3.0.19
+-e git://github.com/mailchimp/mailchimp-marketing-python.git
 Click==7.0
 Flask==1.1.1
 flask-heroku==0.1.9
